fix: issue on mobile menu

--- a/css/styles.css
+++ b/css/styles.css
@@ -19,6 +19,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 body {
@@ -26,6 +27,7 @@ body {
   font-size: 1.8rem;
   line-height: 3.2rem;
   background-color: #FAFAFA;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4 {
@@ -122,7 +124,7 @@ header .nav__mobile {
   position: absolute;
   top: 92px;
   right: 0;
-  transform: translateX(101vw);
+  transform: translateX(101%);
   background-color: #FAFAFA;
   z-index: 1000;
   display: flex;
