--- a/scss/base/_base.scss
+++ b/scss/base/_base.scss
@@ -13,6 +13,7 @@
 
 html {
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 
 body {
@@ -22,7 +23,7 @@ body {
     line-height: 3.2rem;
     background-color: $gray-bg;
     // max-width: 100vw;
-    // overflow-x: hidden;
+    overflow-x: hidden;
 }
 
 h1, h2, h3, h4 {
